# auto_meta

./: .gitignore  3rd_party_licenses.txt  LICENSE  SetupProj.bat  SetupProj.sh  TODO.txt  languages.json  pyproject.toml  requirements.txt  software_metadata_template.toml
src/auto_meta/: basics.py  cli.py  optionals.py
